Closed Bug 620359 Opened 15 years ago Closed 15 years ago

Wrongly ordered members in nsAudioStreamRemote::nsAudioStreamRemote() constructor

Categories

(Core :: Audio/Video, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla2.0b12

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file, 2 obsolete files)

Attached patch Patch v1 (obsolete) — Splinter Review
Bug 612798 reordered the member declarations, but didn't update the constructor.
Flags: in-testsuite-
Attachment #498719 - Flags: review?(kinetik)
I'd rather not have the commas at the start of each line. Otherwise it looks fine, thanks.
AIUI, that's the canonical style, though.
Not in any code that I've worked on, not in the coding style doc on MDC, and certainly not in content/media.
(Yeah, that style varies across components & files.) I just ran into this warning myself & I was going to file a bug, but then I found this existing bug, lying semi-dormant. :) Ms2ger, would you mind tweaking the patch per Comment 1 so this warning can go away?
Attachment #498719 - Attachment is obsolete: true
Attachment #498719 - Flags: review?(kinetik)
Attached patch Patch v2 (obsolete) — Splinter Review
Attachment #505369 - Flags: approval2.0?
Attachment #505369 - Flags: review+
Whiteboard: [build_warning] → [build_warning][needs approval]
Keywords: checkin-needed
Whiteboard: [build_warning][needs approval] → [build_warning]
Attachment #505369 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
Can someone please confirm if this is fixed?
Confirmed fixed. (No GCC build warning if I touch nsAudioStream.cpp and rebuild.)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: