Bug 620359 - Reorder members in nsAudioStreamRemote::nsAudioStreamRemote() constructor; r=kinetik a=dbaron