content/media/nsAudioStream.cpp
@@ -15,12 +15,13 @@
  *
  * The Original Code is Mozilla code.
  *
- * The Initial Developer of the Original Code is the Mozilla Corporation.
+ * The Initial Developer of the Original Code is
+ * the Mozilla Foundation.
  * Portions created by the Initial Developer are Copyright (C) 2007
  * the Initial Developer. All Rights Reserved.
  *
  * Contributor(s):
- *  Chris Double <chris.double@double.co.nz>
+ *   Chris Double <chris.double@double.co.nz>
  *
  * Alternatively, the contents of this file may be used under the terms of
  * either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -603,8 +604,8 @@ nsAudioStreamRemote::nsAudioStreamRemote()
    mFormat(FORMAT_S16_LE),
    mRate(0),
    mChannels(0),
-   mPaused(PR_FALSE),
-   mBytesPerSample(1)
+   mBytesPerSample(1),
+   mPaused(PR_FALSE)
 {}
 
 nsAudioStreamRemote::~nsAudioStreamRemote()
